--- a/SHF assainment 3.html
+++ b/SHF assainment 3.html
@@ -4,7 +4,12 @@
 <title>Hello World</title>
 </head>
 <body>
+<form action="" mathod="" >
 
+</form>
+<input type="text" placeholder="Your Name"/><br/>
+<input type="number" placeholder="Your Age"/>
+<input type="email" placeholder="Your Email"/>
 
 
 </body>
